Update project title and timeline details

--- a/project1.html
+++ b/project1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LocalLift, 2023 - Ashley Kellar</title>
+    <title>Clutch / 'NorthEnd Bank', 2019 - Ashley Kellar</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="project-styles.css">
 </head>
@@ -24,14 +24,14 @@
     <main class="project-detail">
         <div class="project-header">
             <p class="project-category">UX/UI Design</p>
-            <h1 class="project-title">LocalLift, 2023</h1>
+            <h1 class="project-title">Clutch / 'NorthEnd Bank', 2019</h1>
             <p class="project-subtitle">A Mobile App That Helps Communities To Collaborate And Help Each Other During Times Of Crisis Such As Covid-19</p>
         </div>
 
         <div class="project-meta">
             <div class="meta-item">
                 <h3>Timeline:</h3>
-                <p>January - April 2022</p>
+                <p>January - February 2019</p>
             </div>
             <div class="meta-item">
                 <h3>Tools:</h3>
@@ -39,28 +39,28 @@
             </div>
             <div class="meta-item">
                 <h3>Role:</h3>
-                <p>UX/UI Designer, UX Research, Software Development</p>
+                <p>UX/UI Designer, UX Research</p>
             </div>
         </div>
 
         <div class="project-content">
-            <p>The COVID-19 pandemic has greatly affected daily lives and led to extreme consumer behavior and panic buying. As a consequence, daily necessities, food and other resources ran out. World Health Organisation [WHO] suggested that in order to contain this virus, communities need to coordinate together. Even just small benefitting actions in individual communities can benefit the whole world.</p>
+            <p>Fix! The COVID-19 pandemic has greatly affected daily lives and led to extreme consumer behavior and panic buying. As a consequence, daily necessities, food and other resources ran out. World Health Organisation [WHO] suggested that in order to contain this virus, communities need to coordinate together. Even just small benefitting actions in individual communities can benefit the whole world.</p>
             
-            <p>Community resilience is a term used to describe the ability of communities to cope together to recover from large-scale emergencies. This means communities coordinating to strengthen factors such as social networks which will support people in times of crisis. This is proven by the committee for community engagement which was established by CDC in 1995 and the community engagement during the AIDS epidemic.</p>
+            <p>Fix!  Community resilience is a term used to describe the ability of communities to cope together to recover from large-scale emergencies. This means communities coordinating to strengthen factors such as social networks which will support people in times of crisis. This is proven by the committee for community engagement which was established by CDC in 1995 and the community engagement during the AIDS epidemic.</p>
         </div>
 
         <div class="problem-cards">
             <div class="problem-card">
                 <div class="problem-icon">😷</div>
-                <p>Severely disrupted daily life, causing panic buying</p>
+                <p>Fix! Severely disrupted daily life, causing panic buying</p>
             </div>
             <div class="problem-card">
                 <div class="problem-icon">🧻</div>
-                <p>High demand leads to shortages of essentials</p>
+                <p>Fix! High demand leads to shortages of essentials</p>
             </div>
             <div class="problem-card">
                 <div class="problem-icon">🧩</div>
-                <p>Communities struggle to meet basic needs</p>
+                <p>Fix! Communities struggle to meet basic needs</p>
             </div>
         </div>
 
