Update project subtitle and problem descriptions

--- a/project1.html
+++ b/project1.html
@@ -25,7 +25,7 @@
         <div class="project-header">
             <p class="project-category">UX/UI Design</p>
             <h1 class="project-title">Clutch / 'NorthEnd Bank', 2019</h1>
-            <p class="project-subtitle">A Mobile App That Helps Communities To Collaborate And Help Each Other During Times Of Crisis Such As Covid-19</p>
+            <p class="project-subtitle">A Mobile Solution That Brings The Power Of Budgeting Into The Hands Of Millennials</p>
         </div>
 
         <div class="project-meta">
@@ -35,7 +35,7 @@
             </div>
             <div class="meta-item">
                 <h3>Tools:</h3>
-                <p>Figma, iBisPaintX, React Native, JavaScript, MongoDB, GoogleForms</p>
+                <p>Figma, Google Suites</p>
             </div>
             <div class="meta-item">
                 <h3>Role:</h3>
@@ -52,15 +52,15 @@
         <div class="problem-cards">
             <div class="problem-card">
                 <div class="problem-icon">😷</div>
-                <p>Fix! Severely disrupted daily life, causing panic buying</p>
+                <p>Unsure where to begin budgeting</p>
             </div>
             <div class="problem-card">
                 <div class="problem-icon">🧻</div>
-                <p>Fix! High demand leads to shortages of essentials</p>
+                <p>Lack of financial knowledge</p>
             </div>
             <div class="problem-card">
                 <div class="problem-icon">🧩</div>
-                <p>Fix! Communities struggle to meet basic needs</p>
+                <p>Just guessing on personal spending and saving</p>
             </div>
         </div>
 
