Update problem icons and challenges description

--- a/project1.html
+++ b/project1.html
@@ -51,15 +51,15 @@
 
         <div class="problem-cards">
             <div class="problem-card">
-                <div class="problem-icon">😷</div>
+                <div class="problem-icon">🖩</div>
                 <p>Unsure where to begin budgeting</p>
             </div>
             <div class="problem-card">
-                <div class="problem-icon">🧻</div>
+                <div class="problem-icon">📖</div>
                 <p>Lack of financial knowledge</p>
             </div>
             <div class="problem-card">
-                <div class="problem-icon">🧩</div>
+                <div class="problem-icon">🤷</div>
                 <p>Just guessing on personal spending and saving</p>
             </div>
         </div>
@@ -68,7 +68,7 @@
         <section class="project-section">
             <h2 class="section-title">Challenges</h2>
             <div class="section-content">
-                <p class="editable" contenteditable="true">Click to edit text - Describe the main challenges faced in this project...</p>
+                <p class="editable" contenteditable="true">Help customers become better managers of their finances by improving the current account's dashboard after logging in.  Create an intuitive, simple, impactful, people-centered, scalable solution that simplifies the process and empowers the user. </p>
             </div>
         </section>
 
