Rename Project, changed icons

--- a/Clutch.html
+++ b/Clutch.html
@@ -51,11 +51,11 @@
 
         <div class="problem-cards">
             <div class="problem-card">
-                <div class="problem-icon">🖩</div>
+                <div class="problem-icon">📖</div>
                 <p>Unsure where to begin budgeting</p>
             </div>
             <div class="problem-card">
-                <div class="problem-icon">📖</div>
+                <div class="problem-icon">🧮</div>
                 <p>Lack of financial knowledge</p>
             </div>
             <div class="problem-card">
