Update project link to Clutch in index.html

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
                         <p class="editable" contenteditable="true">Click to edit text</p>
                     </a>
                 </div>
-                <a href="project1.html" class="preview-right">
-                    <img src="src/headshot.png" alt="Project 1">
-                    <h4>Project 1</h4>
+                <a href="Clutch.html" class="preview-right">
+                    <img src="src/headshot.png" alt="Clutch">
+                    <h4>Clutch</h4>
                     <p class="editable" contenteditable="true">Click to edit text</p>
                 </a>
             </div>
