--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
             <h2 class="section-header">Project Highlights</h2>
             <div class="portfolio-preview">
                 <div class="preview-left">
-                    <a href="project2.html" class="preview-item">
-                        <img src="src/headshot.png" alt="Project 2">
-                        <h4>Project 2</h4>
+                    <a href="sony.html" class="preview-item">
+                        <img src="src/headshot.png" alt="Sony">
+                        <h4>Sony</h4>
                         <p class="editable" contenteditable="true">Click to edit text</p>
                     </a>
                     <a href="project3.html" class="preview-item">
@@ -86,7 +86,7 @@
                         <p class="editable" contenteditable="true">Click to edit text</p>
                     </a>
                 </div>
-                <a href="Clutch.html" class="preview-right">
+                <a href="clutch.html" class="preview-right">
                     <img src="src/headshot.png" alt="Clutch">
                     <h4>Clutch</h4>
                     <p class="editable" contenteditable="true">Click to edit text</p>
@@ -178,14 +178,14 @@
             </div>
 
             <div class="projects-grid">
-                <a href="project1.html" class="project-grid-card" data-categories="website animation">
-                    <img src="src/headshot.png" alt="Project 1">
-                    <h3>Project 1</h3>
+                <a href="clutch.html" class="project-grid-card" data-categories="website animation">
+                    <img src="src/headshot.png" alt="Clutch">
+                    <h3>Clutch</h3>
                     <p class="editable" contenteditable="true">Click to edit text</p>
                 </a>
-                <a href="project2.html" class="project-grid-card" data-categories="game-ui">
-                    <img src="src/headshot.png" alt="Project 2">
-                    <h3>Project 2</h3>
+                <a href="sony.html" class="project-grid-card" data-categories="game-ui">
+                    <img src="src/headshot.png" alt="Sony">
+                    <h3>Sony</h3>
                     <p class="editable" contenteditable="true">Click to edit text</p>
                 </a>
                 <a href="project3.html" class="project-grid-card" data-categories="website game-ui animation">
