Updated About Me section on home page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <h1>Thanks for stopping by! I'm Ashley Kellar</h1>
                 <p>UI/UX Designer who brings a thoughtful and reflective voice to the team. Combines experience in
                     customer
-                    facing businesses and designing into sleek, streamlined designs through multiple designs practices.
+                    facing businesses and designing sleek, streamlined designs through multiple design practices.
                     Believes that each idea has a seed of excellence, even if the idea is just a stepping stone.</p>
                 <button class="btn-projects" onclick="navigateTo('projects')">Projects</button>
             </div>
@@ -38,19 +38,29 @@
         <div class="info-grid">
             <div class="info-item">
                 <h2>About</h2>
-                <p class="editable" contenteditable="true">Click to edit text</p>
+                <p class="editable" contenteditable="true">UI/UX Designer who brings a thoughtful and reflective voice to the team. Combines experience in
+                    customer
+                    facing businesses and designing sleek, streamlined designs through multiple design practices.
+                    Believes that each idea has a seed of excellence, even if the idea is just a stepping stone.</p>
             </div>
             <div class="info-item">
                 <h2>Experience</h2>
-                <p class="editable" contenteditable="true">Click to edit text</p>
+                <p class="editable" contenteditable="true">UI/UX Design Student | 2016 - 2020
+                Freelance Web Designer | Present</p>
             </div>
             <div class="info-item">
                 <h2>Interests</h2>
-                <p class="editable" contenteditable="true">Click to edit text</p>
+                <p class="editable" contenteditable="true">Usability
+                Natural Systems
+                Stained Glass
+                Light</p>
             </div>
             <div class="info-item">
                 <h2>Education</h2>
-                <p class="editable" contenteditable="true">Click to edit text</p>
+                <p class="editable" contenteditable="true">BS Informatics
+                Cognate: Human Centered Computing
+                Minors: Human Centered Computing, Game Design
+                <i>Indiana University, Bloomington IN, May 2020</i></p>
             </div>
         </div>
 
