Update experience, interests, education, and skills sections

--- a/index.html
+++ b/index.html
@@ -45,21 +45,21 @@
             </div>
             <div class="info-item">
                 <h2>Experience</h2>
-                <p class="editable" contenteditable="true">UI/UX Design Student | 2016 - 2020
+                <p class="editable" contenteditable="true">UI/UX Design Student | 2016 - 2020<br>
                 Freelance Web Designer | Present</p>
             </div>
             <div class="info-item">
                 <h2>Interests</h2>
-                <p class="editable" contenteditable="true">Usability
-                Natural Systems
-                Stained Glass
+                <p class="editable" contenteditable="true">Usability<br>
+                Natural Systems<br>
+                Stained Glass<br>
                 Light</p>
             </div>
             <div class="info-item">
                 <h2>Education</h2>
-                <p class="editable" contenteditable="true">BS Informatics
-                Cognate: Human Centered Computing
-                Minors: Human Centered Computing, Game Design
+                <p class="editable" contenteditable="true">BS Informatics<br>
+                Cognate: Human Centered Computing<br>
+                Minors: Human Centered Computing, Game Design<br>
                 <i>Indiana University, Bloomington IN, May 2020</i></p>
             </div>
         </div>
@@ -67,16 +67,33 @@
         <!-- Skills Section -->
         <div class="skills-section">
             <div class="skill-item">
-                <h3>Skills 1</h3>
-                <p class="editable" contenteditable="true">Click to edit text</p>
+                <h3>Platforms</h3>
+                <p class="editable" contenteditable="true">Figma<br>
+                Adobe XD<br>
+                Photshop<br>
+                Squarespace<br>
+                WIX<br>
+                Adobe Suite<br>
+                Google Workplace</p>
             </div>
             <div class="skill-item">
-                <h3>Skills 2</h3>
-                <p class="editable" contenteditable="true">Click to edit text</p>
+                <h3>Programs</h3>
+                <p class="editable" contenteditable="true">HTML<br>
+                Java<br>
+                C#<br>
+                MySQL<br>
+                Java Script<br>
+                ChatGPT</p>
             </div>
             <div class="skill-item">
-                <h3>Skill 3</h3>
-                <p class="editable" contenteditable="true">Click to edit text</p>
+                <h3>Methods</h3>
+                <p class="editable" contenteditable="true">(Just some of my favs)<br>
+                Mind Mapping<br>
+                Personas<br>
+                Storyboards<br>
+                Uster Journey<br>
+                Prototyping<br>
+                Card Sorting</p>
             </div>
         </div>
 
