Update project links and categories in index.html

--- a/index.html
+++ b/index.html
@@ -205,24 +205,24 @@
             </div>
 
             <div class="projects-grid">
-                <a href="clutch.html" class="project-grid-card" data-categories="website animation">
+                <a href="clutch.html" class="project-grid-card" data-categories="website">
                     <img src="src/headshot.png" alt="Clutch">
                     <h3>Clutch</h3>
                     <p class="editable" contenteditable="true">Click to edit text</p>
                 </a>
-                <a href="sony.html" class="project-grid-card" data-categories="game-ui">
+                <a href="sony.html" class="project-grid-card" data-categories="website">
                     <img src="src/headshot.png" alt="Sony">
                     <h3>Sony</h3>
                     <p class="editable" contenteditable="true">Click to edit text</p>
                 </a>
-                <a href="project3.html" class="project-grid-card" data-categories="website game-ui animation">
+                <a href="planted.html" class="project-grid-card" data-categories="website">
                     <img src="src/headshot.png" alt="Project 3">
-                    <h3>Project 3</h3>
+                    <h3>Planted</h3>
                     <p class="editable" contenteditable="true">Click to edit text</p>
                 </a>
-                <a href="project4.html" class="project-grid-card" data-categories="animation">
+                <a href="hoosierheights.html" class="project-grid-card" data-categories="website">
                     <img src="src/headshot.png" alt="Project 4">
-                    <h3>Project 4</h3>
+                    <h3>Hoosier Heights</h3>
                     <p class="editable" contenteditable="true">Click to edit text</p>
                 </a>
                 <a href="project5.html" class="project-grid-card" data-categories="website game-ui">
@@ -230,7 +230,7 @@
                     <h3>Project 5</h3>
                     <p class="editable" contenteditable="true">Click to edit text</p>
                 </a>
-                <a href="project6.html" class="project-grid-card" data-categories="website">
+                <a href="project6.html" class="project-grid-card" data-categories="website game-ui animation">
                     <img src="src/headshot.png" alt="Project 6">
                     <h3>Project 6</h3>
                     <p class="editable" contenteditable="true">Click to edit text</p>
