Replace Project 3 link with Planted link

--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
                         <h4>Sony</h4>
                         <p class="editable" contenteditable="true">Click to edit text</p>
                     </a>
-                    <a href="project3.html" class="preview-item">
-                        <img src="src/headshot.png" alt="Project 3">
-                        <h4>Project 3</h4>
-                        <p class="editable" contenteditable="true">Click to edit text</p>
+                    <a href="planted.html" class="preview-item">
+                        <img src="src/Artboard 3@2x.png.png" alt="Planted Logo">
+                        <h4>Planted!</h4>
+                        <p class="editable" contenteditable="true">Creating an accessible restraunt website</p>
                     </a>
                 </div>
                 <a href="clutch.html" class="preview-right">
