adding contact form to contacts page

--- a/index.html
+++ b/index.html
@@ -188,6 +188,27 @@
                     </div>
                 </div>
                 <p class="work-preference">Hybrid/On-site preferred, open to relocating if the conditions are right</p>
+                                <!-- Contact Form Section -->
+                <div class="contact-form-wrapper">
+                    <h2 class="form-title">Contact Form</h2>
+                    <form class="contact-form">
+                        <div class="form-row">
+                            <input type="text" placeholder="Full name" class="form-input" required>
+                            <input type="email" placeholder="Email address" class="form-input" required>
+                        </div>
+                        <textarea placeholder="Your Message" class="form-textarea" rows="6" required></textarea>
+                        <div class="form-submit">
+                            <button type="submit" class="btn-send">
+                                <span>Send Message</span>
+                                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                    stroke-width="2">
+                                    <line x1="22" y1="2" x2="11" y2="13"></line>
+                                    <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
+                                </svg>
+                            </button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </section>
