--- a/planted.html
+++ b/planted.html
@@ -28,6 +28,10 @@
             <p class="project-subtitle">A Mobile Solution That Brings The Power Of Budgeting Into The Hands Of Millennials</p>
         </div>
 
+        <div class="project-hero-image">
+            <img src="src/planted/planted.png" alt="Planted project showcase">
+        </div>
+
         <div class="project-meta">
             <div class="meta-item">
                 <h3>Timeline:</h3>
