Adding blurb to planted projects page

--- a/index.html
+++ b/index.html
@@ -237,9 +237,9 @@
                     <p class="editable" contenteditable="true">Click to edit text</p>
                 </a>
                 <a href="planted.html" class="project-grid-card" data-categories="website">
-                    <img src="src/headshot.png" alt="Project 3">
+                    <img src="src\planted\planted.png" alt="Planted">
                     <h3>Planted</h3>
-                    <p class="editable" contenteditable="true">Click to edit text</p>
+                    <p class="editable" contenteditable="true">A Mobile Solution That Brings The Power Of Budgeting Into The Hands Of Millennials</p>
                 </a>
                 <a href="hoosierheights.html" class="project-grid-card" data-categories="website">
                     <img src="src/headshot.png" alt="Project 4">
