Fixing planted blurb

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                 <a href="planted.html" class="project-grid-card" data-categories="website">
                     <img src="src\planted\planted.png" alt="Planted">
                     <h3>Planted</h3>
-                    <p class="editable" contenteditable="true">A Mobile Solution That Brings The Power Of Budgeting Into The Hands Of Millennials</p>
+                    <p class="editable" contenteditable="true">Your local plant-based food truck and caterer</p>
                 </a>
                 <a href="hoosierheights.html" class="project-grid-card" data-categories="website">
                     <img src="src/headshot.png" alt="Project 4">
