Updating planted description on project page

--- a/planted.html
+++ b/planted.html
@@ -24,8 +24,8 @@
     <main class="project-detail">
         <div class="project-header">
             <p class="project-category">UX/UI Design</p>
-            <h1 class="project-title">Planted, 2022</h1>
-            <p class="project-subtitle">A Mobile Solution That Brings The Power Of Budgeting Into The Hands Of Millennials</p>
+            <h1 class="project-title">Planted, 2022</h1>Your local plant-based food truck and caterer
+            <p class="project-subtitle"></p>
         </div>
 
         <div class="project-hero-image">
