Updated main page logo for planted

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <p class="editable" contenteditable="true">Click to edit text</p>
                     </a>
                     <a href="planted.html" class="preview-item">
-                        <img src="src/Artboard 3@2x.png" alt="Planted Logo">
+                        <img src="src/planted/planted.png" alt="Planted Logo">
                         <h4>Planted!</h4>
                         <p class="editable" contenteditable="true">Creating an accessible restraunt website</p>
                     </a>
