fixing planted href

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         <h4>Sony</h4>
                         <p class="editable" contenteditable="true">Click to edit text</p>
                     </a>
-                    <a href="Planted.html" class="preview-item">
+                    <a href="planted.html" class="preview-item">
                         <img src="src/Projects/Planted/planted.png" alt="Planted">
                         <h4>Planted</h4>
                         <p>Planted, a plant based food truck and caterer</p>
