fixing planted link on projects page

--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
                     <h3>Sony</h3>
                     <p class="editable" contenteditable="true">Click to edit text</p>
                 </a>
-                <a href="Planted.html" class="project-grid-card" data-categories="website">
+                <a href="planted.html" class="project-grid-card" data-categories="website">
                     <img src="src/Projects/Planted/planted.png" alt="Planted">
                     <h3>Planted</h3>
                     <p>Planted, a plant based food truck and caterer</p>
