changed src to pictures

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
     <section id="contact" class="page active">
         <div class="contact-container">
             <div class="contact-left">
-                <img src="src/headshot.png" alt="Ashley Kellar" class="contact-photo">
+                <img src="pictures/headshot.png" alt="Ashley Kellar" class="contact-photo">
                 <h2>Ashley Kellar</h2>
                 <p class="contact-title">UI/UX Designer</p>
                 <div class="contact-divider"></div>
