--- a/index.html
+++ b/index.html
@@ -103,18 +103,18 @@
             <div class="portfolio-preview">
                 <div class="preview-left">
                     <a href="sony.html" class="preview-item">
-                        <img src="src/headshot.png" alt="Sony">
+                        <img src="pictures/headshot.png" alt="Sony">
                         <h4>Sony</h4>
                         <p class="editable" contenteditable="true">Click to edit text</p>
                     </a>
                     <a href="planted.html" class="preview-item">
-                        <img src="src/Projects/Planted/planted.png" alt="Planted">
+                        <img src="pictures/planted.png" alt="Planted">
                         <h4>Planted</h4>
                         <p>Planted, a plant based food truck and caterer</p>
                     </a>
                 </div>
                 <a href="clutch.html" class="preview-right">
-                    <img src="src/headshot.png" alt="Clutch">
+                    <img src="pictures/headshot.png" alt="Clutch">
                     <h4>Clutch</h4>
                     <p class="editable" contenteditable="true">Click to edit text</p>
                 </a>
