--- a/planted.html
+++ b/planted.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="project-hero-image">
-            <img src="src/planted/planted.png" alt="Planted project showcase">
+            <img src="pictures/planted.png" alt="Planted project showcase">
         </div>
 
         <div class="project-meta">
