--- a/projects.html
+++ b/projects.html
@@ -34,32 +34,32 @@
 
             <div class="projects-grid">
                 <a href="clutch.html" class="project-grid-card" data-categories="website">
-                    <img src="src/headshot.png" alt="Clutch">
+                    <img src="pictures/headshot.png" alt="Clutch">
                     <h3>Clutch</h3>
                     <p class="editable" contenteditable="true">Click to edit text</p>
                 </a>
                 <a href="sony.html" class="project-grid-card" data-categories="website">
-                    <img src="src/headshot.png" alt="Sony">
+                    <img src="pictures/headshot.png" alt="Sony">
                     <h3>Sony</h3>
                     <p class="editable" contenteditable="true">Click to edit text</p>
                 </a>
                 <a href="planted.html" class="project-grid-card" data-categories="website">
-                    <img src="src/Projects/Planted/planted.png" alt="Planted">
+                    <img src="pictures/planted.png" alt="Planted">
                     <h3>Planted</h3>
                     <p>Planted, a plant based food truck and caterer</p>
                 </a>
                 <a href="hoosierheights.html" class="project-grid-card" data-categories="website">
-                    <img src="src/headshot.png" alt="Hoosier Heights">
+                    <img src="pictures/headshot.png" alt="Hoosier Heights">
                     <h3>Hoosier Heights</h3>
                     <p class="editable" contenteditable="true">Click to edit text</p>
                 </a>
                 <a href="project5.html" class="project-grid-card" data-categories="website game-ui">
-                    <img src="src/headshot.png" alt="Project 5">
+                    <img src="pictures/headshot.png" alt="Project 5">
                     <h3>Project 5</h3>
                     <p class="editable" contenteditable="true">Click to edit text</p>
                 </a>
                 <a href="project6.html" class="project-grid-card" data-categories="website game-ui animation">
-                    <img src="src/headshot.png" alt="Project 6">
+                    <img src="pictures/headshot.png" alt="Project 6">
                     <h3>Project 6</h3>
                     <p class="editable" contenteditable="true">Click to edit text</p>
                 </a>
