--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <a href="sony.html" class="preview-item">
                         <img src="pictures/headshot.png" alt="Sony">
                         <h4>Sony</h4>
-                        <p class="editable" contenteditable="true">Click to edit text</p>
+                        <p class="editable" contenteditable="true">From creation to launch</p>
                     </a>
                     <a href="planted.html" class="preview-item">
                         <img src="pictures/planted.png" alt="Planted">
@@ -114,9 +114,9 @@
                     </a>
                 </div>
                 <a href="clutch.html" class="preview-right">
-                    <img src="pictures/headshot.png" alt="Clutch">
+                    <img src="pictures/clutch_dashboard.png" alt="Dashboard of a banking app">
                     <h4>Clutch</h4>
-                    <p class="editable" contenteditable="true">Click to edit text</p>
+                    <p class="editable" contenteditable="true">A banking solution for millenials</p>
                 </a>
             </div>
             <div class="view-more-container">
