Replace image source with PDF for Clutch dashboard

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     </a>
                 </div>
                 <a href="clutch.html" class="preview-right">
-                    <img src="pictures/clutch_dashboard.png" alt="Dashboard of a banking app">
+                    <img src="pictures/clutch_dashboard.pdf" alt="Dashboard of a banking app">
                     <h4>Clutch</h4>
                     <p class="editable" contenteditable="true">A banking solution for millenials</p>
                 </a>
