Update Clutch project details and image source

--- a/projects.html
+++ b/projects.html
@@ -34,9 +34,9 @@
 
             <div class="projects-grid">
                 <a href="clutch.html" class="project-grid-card" data-categories="website">
-                    <img src="pictures/headshot.png" alt="Clutch">
+                    <img src="pictures/clutch_dashboard.pdf" alt="Clutch">
                     <h3>Clutch</h3>
-                    <p class="editable" contenteditable="true">Click to edit text</p>
+                    <p class="editable" contenteditable="true">A banking solution for millennials</p>
                 </a>
                 <a href="sony.html" class="project-grid-card" data-categories="website">
                     <img src="pictures/headshot.png" alt="Sony">
