Replace PDF image with PNG for Clutch project

--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
 
             <div class="projects-grid">
                 <a href="clutch.html" class="project-grid-card" data-categories="website">
-                    <img src="pictures/clutch_dashboard.pdf" alt="Clutch">
+                    <img src="pictures/clutch_dashboard.png" alt="Clutch">
                     <h3>Clutch</h3>
                     <p class="editable" contenteditable="true">A banking solution for millennials</p>
                 </a>
