Updated sony picture

--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
             <div class="portfolio-preview">
                 <div class="preview-left">
                     <a href="sony.html" class="preview-item">
-                        <img src="pictures/headshot.png" alt="Sony">
+                        <img src="pictures/playstation_dashboard.png" alt="Sony">
                         <h4>Sony</h4>
-                        <p class="editable" contenteditable="true">From creation to launch</p>
+                        <p class="editable" contenteditable="true">Launch your indie game</p>
                     </a>
                     <a href="planted.html" class="preview-item">
                         <img src="pictures/planted.png" alt="Planted">
