Update Sony project details and image

--- a/projects.html
+++ b/projects.html
@@ -39,9 +39,9 @@
                     <p class="editable" contenteditable="true">A banking solution for millennials</p>
                 </a>
                 <a href="sony.html" class="project-grid-card" data-categories="website">
-                    <img src="pictures/headshot.png" alt="Sony">
+                    <img src="pictures/playstation_dashboard.png" alt="Sony">
                     <h3>Sony</h3>
-                    <p class="editable" contenteditable="true">Click to edit text</p>
+                    <p class="editable" contenteditable="true">Launch your indie game</p>
                 </a>
                 <a href="planted.html" class="project-grid-card" data-categories="website">
                     <img src="pictures/planted.png" alt="Planted">
