Add hero image section to sony.html

--- a/sony.html
+++ b/sony.html
@@ -29,6 +29,10 @@
             <p class="project-subtitle">A Mobile Solution That Brings The Power Of Budgeting Into The Hands Of Millennials</p>
         </div>
 
+        <div class="project-hero-image">
+            <img src="pictures/playstation_dashboard.png" alt="Dashboard of game creator">
+        </div>
+
         <div class="project-meta">
             <div class="meta-item">
                 <h3>Timeline:</h3>
