Update project subtitle, timeline, and tools

--- a/hoosierheights.html
+++ b/hoosierheights.html
@@ -25,17 +25,21 @@
         <div class="project-header">
             <p class="project-category">UX/UI Design</p>
             <h1 class="project-title">Hoosier Heights Bloomington</h1>
-            <p class="project-subtitle">A Mobile Solution That Brings The Power Of Budgeting Into The Hands Of Millennials</p>
+            <p class="project-subtitle">Fix! A Mobile Solution That Brings The Power Of Budgeting Into The Hands Of Millennials</p>
+        </div>
+
+        <div class="project-hero-image">
+            <img src="pictures/hoosierheightsbloom_dashboard.png" alt="Hoosier Heights Bloomington website homepage">
         </div>
 
         <div class="project-meta">
             <div class="meta-item">
                 <h3>Timeline:</h3>
-                <p>January - March 2022</p>
+                <p>February - May 2022</p>
             </div>
             <div class="meta-item">
                 <h3>Tools:</h3>
-                <p>Figma, Google Suites, Wix, GoDaddy </p>
+                <p>Figma, Google Suites, Wix, GoDaddy, .html, .css </p>
             </div>
             <div class="meta-item">
                 <h3>Role:</h3>
