Updated hoosierheights picture

--- a/projects.html
+++ b/projects.html
@@ -46,12 +46,12 @@
                 <a href="planted.html" class="project-grid-card" data-categories="website">
                     <img src="pictures/planted.png" alt="Planted">
                     <h3>Planted</h3>
-                    <p>Planted, a plant based food truck and caterer</p>
+                    <p>Planted, a plant-based food truck and caterer</p>
                 </a>
                 <a href="hoosierheights.html" class="project-grid-card" data-categories="website">
-                    <img src="pictures/headshot.png" alt="Hoosier Heights">
-                    <h3>Hoosier Heights</h3>
-                    <p class="editable" contenteditable="true">Click to edit text</p>
+                    <img src="pictures/hoosierheightsbloom_dashboard.png" alt="Hoosier Heights">
+                    <h3>Hoosier Heights Bloomington</h3>
+                    <p class="editable" contenteditable="true">Updating a prexisting website</p>
                 </a>
                 <a href="project5.html" class="project-grid-card" data-categories="website game-ui">
                     <img src="pictures/headshot.png" alt="Project 5">
