Adding project carousel and json data management

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
         </div>
     </section>
 
+    <script src="projects-loader.js"></script>
     <script src="script.js"></script>
 </body>
 
