--- a/planted.html
+++ b/planted.html
@@ -24,8 +24,8 @@
     <main class="project-detail">
         <div class="project-header">
             <p class="project-category">UX/UI Design</p>
-            <h1 class="project-title">Planted, 2022</h1>Your local plant-based food truck and caterer
-            <p class="project-subtitle"></p>
+            <h1 class="project-title">Planted</h1>
+            <p class="project-subtitle">Planted, a plant based food truck and caterer</p>
         </div>
 
         <div class="project-hero-image">
@@ -35,44 +35,27 @@
         <div class="project-meta">
             <div class="meta-item">
                 <h3>Timeline:</h3>
-                <p>January - February 2019</p>
+                <p>Click to edit text</p>
             </div>
             <div class="meta-item">
                 <h3>Tools:</h3>
-                <p>Figma, WIX, Google Suites</p>
+                <p>Click to edit text</p>
             </div>
             <div class="meta-item">
                 <h3>Role:</h3>
-                <p>Web Designer, UX/UI Designer, UX Research</p>
+                <p>Click to edit text</p>
             </div>
         </div>
 
         <div class="project-content">
-            <p>Fix! The COVID-19 pandemic has greatly affected daily lives and led to extreme consumer behavior and panic buying. As a consequence, daily necessities, food and other resources ran out. World Health Organisation [WHO] suggested that in order to contain this virus, communities need to coordinate together. Even just small benefitting actions in individual communities can benefit the whole world.</p>
-            
-            <p>Fix!  Community resilience is a term used to describe the ability of communities to cope together to recover from large-scale emergencies. This means communities coordinating to strengthen factors such as social networks which will support people in times of crisis. This is proven by the committee for community engagement which was established by CDC in 1995 and the community engagement during the AIDS epidemic.</p>
-        </div>
-
-        <div class="problem-cards">
-            <div class="problem-card">
-                <div class="problem-icon">📖</div>
-                <p>Unsure where to begin budgeting</p>
-            </div>
-            <div class="problem-card">
-                <div class="problem-icon">🧮</div>
-                <p>Lack of financial knowledge</p>
-            </div>
-            <div class="problem-card">
-                <div class="problem-icon">🤷</div>
-                <p>Just guessing on personal spending and saving</p>
-            </div>
+            <p class="editable" contenteditable="true">Click to edit text - Add project overview and description...</p>
         </div>
 
         <!-- Challenges Section -->
         <section class="project-section">
             <h2 class="section-title">Challenges</h2>
             <div class="section-content">
-                <p class="editable" contenteditable="true">Help customers become better managers of their finances by improving the current account's dashboard after logging in.  Create an intuitive, simple, impactful, people-centered, scalable solution that simplifies the process and empowers the user. </p>
+                <p class="editable" contenteditable="true">Click to edit text - Describe the main challenges faced in this project...</p>
             </div>
         </section>
 
@@ -166,6 +149,7 @@
         </section>
     </main>
 
+    <script src="projects-loader.js"></script>
     <script src="script.js"></script>
 </body>
 
