--- a/hoosierheights.html
+++ b/hoosierheights.html
@@ -13,10 +13,10 @@
     <!-- Header Navigation -->
     <header class="main-header">
         <nav>
-            <a href="index.html#home">Home</a>
-            <a href="index.html#projects">Projects</a>
-            <a href="index.html#about">About</a>
-            <a href="index.html#contact">Contact</a>
+            <a href="index.html">Home</a>
+            <a href="projects.html">Projects</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
             <a href="resume.pdf" download>Resume</a>
         </nav>
     </header>
@@ -166,6 +166,7 @@
         </section>
     </main>
 
+    <script src="projects-loader.js"></script>
     <script src="script.js"></script>
 </body>
 
