--- a/projects.html
+++ b/projects.html
@@ -32,41 +32,13 @@
                 <button class="filter-btn" data-filter="animation">Animation</button>
             </div>
 
-            <div class="projects-grid">
-                <a href="clutch.html" class="project-grid-card" data-categories="website">
-                    <img src="pictures/clutch_dashboard.png" alt="Clutch">
-                    <h3>Clutch</h3>
-                    <p class="editable" contenteditable="true">A banking solution for millennials</p>
-                </a>
-                <a href="sony.html" class="project-grid-card" data-categories="website">
-                    <img src="pictures/playstation_dashboard.png" alt="Sony">
-                    <h3>Sony</h3>
-                    <p class="editable" contenteditable="true">Launch your indie game</p>
-                </a>
-                <a href="planted.html" class="project-grid-card" data-categories="website">
-                    <img src="pictures/planted.png" alt="Planted">
-                    <h3>Planted</h3>
-                    <p>Planted, a plant-based food truck and caterer</p>
-                </a>
-                <a href="hoosierheights.html" class="project-grid-card" data-categories="website">
-                    <img src="pictures/hoosierheightsbloom_dashboard.png" alt="Hoosier Heights">
-                    <h3>Hoosier Heights Bloomington</h3>
-                    <p class="editable" contenteditable="true">Updating a prexisting website</p>
-                </a>
-                <a href="project5.html" class="project-grid-card" data-categories="website game-ui">
-                    <img src="pictures/headshot.png" alt="Project 5">
-                    <h3>Project 5</h3>
-                    <p class="editable" contenteditable="true">Click to edit text</p>
-                </a>
-                <a href="project6.html" class="project-grid-card" data-categories="website game-ui animation">
-                    <img src="pictures/headshot.png" alt="Project 6">
-                    <h3>Project 6</h3>
-                    <p class="editable" contenteditable="true">Click to edit text</p>
-                </a>
+            <div class="projects-grid" id="projects-grid">
+                <!-- Projects will be dynamically loaded from projects-data.json -->
             </div>
         </div>
     </section>
 
+    <script src="projects-loader.js"></script>
     <script src="script.js"></script>
 </body>
 
