--- a/hoosierheights.html
+++ b/hoosierheights.html
@@ -13,11 +13,18 @@
     <!-- Header Navigation -->
     <header class="main-header">
         <nav>
-            <a href="index.html">Home</a>
-            <a href="projects.html">Projects</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-            <a href="resume.pdf" download>Resume</a>
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <div class="nav-links">
+                <a href="index.html">Home</a>
+                <a href="projects.html">Projects</a>
+                <a href="about.html">About</a>
+                <a href="contact.html">Contact</a>
+                <a href="resume.pdf" download>Resume</a>
+            </div>
         </nav>
     </header>
 
