--- a/contact.html
+++ b/contact.html
@@ -71,14 +71,34 @@
             </div>
 
             <div class="contact-right">
+                <!-- Contact Form Section -->
+                <div class="contact-form-wrapper">
+                    <h2 class="form-title">Contact Form</h2>
+                    <form class="contact-form">
+                        <div class="form-row">
+                            <input type="text" placeholder="Full name" class="form-input" required>
+                            <input type="email" placeholder="Email address" class="form-input" required>
+                        </div>
+                        <textarea placeholder="Your Message" class="form-textarea" rows="6" required></textarea>
+                        <div class="form-submit">
+                            <button type="submit" class="btn-send">
+                                <span>Send Message</span>
+                                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                    stroke-width="2">
+                                    <line x1="22" y1="2" x2="11" y2="13"></line>
+                                    <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
+                                </svg>
+                            </button>
+                        </div>
+                    </form>
+                </div>
                 <div class="map-container">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3055824.8!2d-86.5264!3d39.1653!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x886c5f2c8c8c8c8d%3A0x1234567890abcdef!2s39%C2%B010&#39;10.5%22N+86%C2%B032&#39;18.8%22W!5e0!3m2!1sen!2sus!4v1731600000000!5m2!1sen!2sus"
                         width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy">
                     </iframe>
                     <div class="map-info">
-                        <p class="coordinates">39°10'10.5"N 86°32'18.8"W</p>
-                        <p class="location">5F96+RHG Bloomington, Indiana</p>
+                        <p class="location">Bloomington, Indiana</p>
                     </div>
                 </div>
                 <p class="work-preference">Hybrid/On-site preferred, open to relocating if the conditions are right</p>
