--- a/clutch.html
+++ b/clutch.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clutch / 'NorthEnd Bank', 2019 - Ashley Kellar</title>
+    <title>Clutch / 'NorthEnd Bank'</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="project-styles.css">
 </head>
