Fix image source and update section title

--- a/witcher.html
+++ b/witcher.html
@@ -35,7 +35,7 @@
         </div>
 
         <div class="project-hero-image">
-            <img src="pictures/Witcher_original" alt="Screenshot of The Witcher game play with no UI">
+            <img src="pictures/witcher_original" alt="Screenshot of The Witcher game play with no UI">
         </div>
 
         <div class="project-meta">
@@ -61,6 +61,7 @@
         <section class="project-section">
             <h2 class="section-title">Challenges</h2>
             <div class="section-content">
+                 <img src="pictures/witcher_original.png" alt="Screenshot of The Witcher with original UI">
                 <p class="editable" contenteditable="true">Click to edit text - Describe the main challenges faced in this project...</p>
             </div>
         </section>
@@ -75,7 +76,7 @@
 
         <!-- Research Section -->
         <section class="project-section">
-            <h2 class="section-title">Research</h2>
+            <h2 class="section-title">Process</h2>
             <div class="section-content">
                 <p class="editable" contenteditable="true">Click to edit text - Detail the research methodology and findings...</p>
             </div>
